# learn-gpt-api

./: README.md
.github/workflows/: build.yml  release.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/gpt/: mod.rs
server/src/routes/: errors.rs  mod.rs
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/app/: chat.tsx  globals.css  layout.tsx  page.tsx
