[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10"
anyhow = "1"
dotenvy = "0.15.7"
tokio = { version = "1.28.1", features = ["full"] }
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
